# rust-zero-to-prod

./: Cargo.toml
migrations/: 20231117082236_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
src/tests/: test.rs
tests/: test_health_check.rs
